@@ -46,6 +46,7 @@ Changes for v2.00
 - Added facility to import and edit protocols from ProtocolBuilder (Graham)
 - Tentative fix for Setup.vbs on 64-bit Windows 7 (Greg)
 - Disable context menu items for device upgrade keymoves shown on the keymove panel (Greg)
+- Enable export as a .ir file
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
